--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>springboot-backend</name>
 	<description>Spring Boot RESTful Web Services</description>
 	<properties>
-		<java.version>16</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -62,6 +62,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+    </configuration>
+</plugin>
 		</plugins>
 	</build>
 
